Spelling and colors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<aside>
 					<div class="profile">
 						<img src="images/profile.png" alt="Max Leiter">
-						<h1>Max Leiter</h1>
+						<h1 class="header">Max Leiter</h1>
 						<p class="subtitle">
 							<b> University of Southern California, Sophomore</b><br>
 							<span class="small">Computer Science &amp; Business Administration</span>
@@ -37,14 +37,14 @@
 					</div>
 				</aside>
 				<aside class="work">
-					<h2>Work Experience</h2>
+					<h2 class="header">Work Experience</h2>
 					<p>
 						<p>
 							<strong>Fall 2019</strong> | Software Developer <br> <i>USC Annenberg Media, Los Angeles, CA</i> <br>
 							Currently handling all development related to the official Annenberg Media app, Annie. 
 						</p>
 					</p>
-					<hr>
+					<hr />
 					<p>
 						<p>
 							<strong>Summer 2019</strong> | Software Developer <br> <i>BlitzIQ, San Francisco, CA</i> <br>
@@ -52,14 +52,14 @@
 						</p>
 
 					</p>
-					<hr>
+					<hr />
 					<p>
 						<p>
 							<strong>Summer 2017</strong> | Student Intern <br> <i>Proctor Foundation, University of California, San Francisco, CA</i> <br>
 							Developed a Java application for accurately and consistently taking measurements of retinal images to assist ophthalmologists in diagnosing glaucoma. <i><a class="paper-link" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0220362#sec013">Paper available here</a></i>
 						</p>
 					</p>
-					<hr>
+					<hr />
 					<p>
 						<p>
 							<strong>Summer 2016</strong> | Technical Intern <br> <i>Five9 Network Systems, Rochester, NY</i><br>
@@ -68,7 +68,7 @@
 					</p>
 				</aside>
 				<aside class="skills">
-					<h2>Skills</h2>
+					<h2 class="header">Skills</h2>
 					<div class="skills-grid-container">
 						<span>
 							<p>
@@ -102,11 +102,10 @@
 			<article class="projects">
 				<header>
 					<h2 class="header">My Projects</h2>
-					<hr>
 				</header>
 				<section>
 					<h3>Annie</h3>
-					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>. I re-wrote the existing Ionic app with React, Redux, material-ui, and Cordova. The app features an innovative news feed and an interative chat bot for best engaging with the student and faculty populations at USC.</p>
+					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>. I re-wrote the existing Ionic app with React, Redux, material-ui, and Cordova. The app features an innovative news feed and an interactive chat bot for best engaging with the student and faculty populations at USC.</p>
 				</section>
 				<section>
 					<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
