Added annie dev badge

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<h2 class="header">My Projects</h2>
 				</header>
 				<section>
-					<h3>Annie</h3>
+					<h3>Annie</h3> <span class="after"><a class="box" href="https://github.com/MaxLeiter/jsonTree">developer</a></span>
 					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>. I re-wrote the existing Ionic app with React, Redux, material-ui, and Cordova. The app features an innovative news feed and an interactive chat bot for best engaging with the student and faculty populations at USC.</p>
 				</section>
 				<section>
