--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 			<div class="main wrapper clearfix">
 				<aside>
 					<div class="profile">
-						<img src="images/profile.png" alt="Max Leiter">
 						<h1 class="header">Max Leiter</h1>
 						<p class="subtitle">
-							<b> University of Southern California, Sophomore</b><br>
+							<b> University of Southern California, Graduating 2022</b><br>
 							<span class="small">Computer Science &amp; Business Administration</span>
 						</p>
 						<a href=""><i class="site" data-link="https://maxleiter.com"></i></a>
