remove extra tab character

--- a/X11.html
+++ b/X11.html
@@ -20,7 +20,7 @@
 				<p style="text-align: center;">
 					<b> Table of Contents </b>
 				</p>
-				<ol style="margin-left: 2	0%;">
+				<ol style="margin-left: 20%;">
 					<li> <a href="#intro">Introduction</a></li>
 					<li> <a href="#how">How it works</a> </li>
 					<li> <a href="#why">Why</a> </li>
