--- a/X11.html
+++ b/X11.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>X11 on iOS</title>
-		<meta name="description" content="Max Leiter - a highschool student with a passion for technology. My personal website detailing projects, classes, and other work.">
-		<meta name="keywords" content="Max,Leiter,Max Leiter,highschool,projects,resume">
+		<meta name="description" content="Max Leiter - undergrad with a passion for technology. My personal website detailing projects, classes, and other work.">
+		<meta name="keywords" content="Max,Leiter,Max Leiter, X11, iOS, Linux, Xorg, Cydia, jailbreak, projects">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/normalize.min.css">
 		<link rel="stylesheet" href="css/main.css">
