--- a/X11.html
+++ b/X11.html
@@ -53,10 +53,10 @@
 				<hr>
 				<h3 class="header" id="intro"> Introduction </h3>
 				<p>
-					I'm excited to announce the "developer edition" <sup><a href="#1">[1]</a></sup> of X11 on iOS. I've successfully compiled and packaged the required dependencies (and some optional packages) for a fully functioning X11 desktop system on iOS 12 and up. All packages (and all their dependencies, as there are very few *nix libraries ported to iOS) have been compiled for arm64 and have been tested on iOS 12.4 and iOS 13.2. This requires a jailbroken device. 
+					I'm excited to announce the "developer edition" <sup><a href="#1">[1]</a></sup> of X11 on iOS. I've successfully compiled and packaged the required dependencies (and some optional packages) for a fully functioning X11 desktop system on iOS 12 and up. All packages have been compiled for arm64 and have been tested on iOS 12.4 and iOS 13.1. This requires a jailbroken device. 
 				</p>
 				<p>
-					 I intend for this site to largely be documentation for building yourself, in case I disappear or lose interest. 
+					 I intend for this site to largely be documentation for building yourself, in case I disappear or lose interest. You can add my Cydia repo, https://maxleiter.com/cydia, to get the deb versions of the packages. Please let me know if you run across any issues; it's likely I messed up including a library or something like that.
 				</p>
 				<!-- <i>(soon to be replaced with much better image) teaser image:</i> -->
 				<!-- <img src="https://i.redd.it/fglq0aevrx441.png" style="width: 70%; height: 50%;"> -->
