Oxford comma, I guess

--- a/X11.html
+++ b/X11.html
@@ -69,7 +69,7 @@
 				</p>
 				<h3 class="header" id="why"> Why </h3>
 				<p>
-					 I want to turn my iPad into a proper development environment, and a windowing system helps with that. It's a powerful machine with a Unix-like OS, so X11 seemed like a reasonable project. X11 allows running arbirtary Linux applications (assuming you can make them compile) &mdash; Firefox, IDE's, and native file explorers and more are now possible. 
+					 I want to turn my iPad into a proper development environment, and a windowing system helps with that. It's a powerful machine with a Unix-like OS, so X11 seemed like a reasonable project. X11 allows running arbirtary Linux applications (assuming you can make them compile) &mdash; Firefox, IDE's, native file explorers, and more are now possible. 
 				</p>
 				
 				<h3 class="header" id="features"> Current Features </h3>
