--- a/X11.html
+++ b/X11.html
@@ -42,6 +42,7 @@
 					<li> <a href="#intro">Introduction</a></li>
 					<li> <a href="#how">How it works</a> </li>
 					<li> <a href="#why">Why</a> </li>
+					<li> <a href="#features">Features</a> </li>
 					<li> <a href="#roadmap">Roadmap</a> </li>
 					<li> <a href="#contribute">Want to contribute?</a> </li>
 					<li> <a href="#instructions">Instructions</a> </li>
