--- a/X11.html
+++ b/X11.html
@@ -101,7 +101,7 @@
 					<li> OpenGL support via Mesa </li>
 					<li> The rest of Xorg applications </li>
 					<li> Proper desktop enviroments like XFCE and GNOME</li>
-					<li> Expirement with Wayland </li>
+					<li> Experiment with Wayland </li>
 				</ul>
 				<h3 class="header" id="contribute"> Want to contribute? </h3>
 				Interested in using X11 now, or helping make it available sooner? Feel free to <a href="mailto:maxwell.leiter@gmail.com">email me</a> or find me on IRC as MaxLeiter in #X11iOS on Freenode.
