--- a/X11.html
+++ b/X11.html
@@ -63,11 +63,11 @@
 			</aside>
 			<div class="blog main wrapper clearfix">
 
-				<h1> X11 on iOS </h1>
+				<h1>X11 on iOS</h1>
 				<hr>
 				<h3 class="header" id="intro"> Introduction </h3>
 				<p>
-					I'm excited to announce the "developer edition" <sup><a href="#1">[1]</a></sup> of X11 on iOS. The packages and dependencies for a fully functioning X11 desktop system on iOS 12 and up have been compiled and are avaiable on Cydia. All packages have been compiled for arm64 and have been tested on iOS 12.4 and iOS 13.1. This requires a jailbroken device. 
+					I'm excited to announce the "developer edition" <sup><a href="#1" id="1src">[1]</a></sup> of X11 on iOS. The packages and dependencies for a fully functioning X11 desktop system on iOS 12 and up have been compiled and are avaiable on Cydia. All packages have been compiled for arm64 and have been tested on iOS 12.4 and iOS 13.1. This requires a jailbroken device. 
 				</p>
 				<p>
 					 Ths site will serve largely as documentation for building yourself, in case I disappear or lose interest. You can add the Cydia repo below for the deb packages. Please let me know if you run across any issues; it's likely I messed up including a library or something like that.
@@ -79,7 +79,7 @@
 				<!-- <img src="https://i.redd.it/fglq0aevrx441.png" style="width: 70%; height: 50%;"> -->
 				<h3 class="header" id="how"> How it works </h3>
 				<p>
-					At the moment, a virtual screen is accessed via a VNC client to an Xvnc<sup><a href="#2">[2]</a></sup>instance running on the iDevice. If you're unfamiliar, Xvnc is an X server with a virtual screen that can be accessed via VNC. The best part of this is no drivers are required: it's all handled by Xvnc.
+					At the moment, a virtual screen is accessed via a VNC client to an Xvnc<sup><a href="#2" id="2src">[2]</a></sup>instance running on the iDevice. If you're unfamiliar, Xvnc is an X server with a virtual screen that can be accessed via VNC. The best part of this is no drivers are required: it's all handled by Xvnc.
 				</p>
 				<p>
 		
@@ -109,8 +109,8 @@
 				<h3 class="header" id="instructions"> Instructions </h3>
 				// TODO: write-up notes on compiling all packages + deps.
 				<hr>
-				<a class="footnote" id="1">[1] AKA only meant for people who know what they're doing</a> <br>
-				<a class="footnote" id="2">[2] https://tigervnc.org/doc/Xvnc.html </a>  <br>
+				<a class="footnote" id="1" href="#1src">[1] AKA only meant for people who know what they're doing</a> <br>
+				<a class="footnote" id="2" href="#2src">[2] https://tigervnc.org/doc/Xvnc.html </a>  <br>
 			</div>
 		</div>
 
