--- a/X11.html
+++ b/X11.html
@@ -41,7 +41,6 @@
 			    background-color: darkslateblue;
 			  }
 
-
 			}
 		</style>
 	</head>
@@ -114,6 +113,9 @@
 			</div>
 		</div>
 
-
+		<footer class="blog main wrapper" style="display: flex; justify-content: space-between;">
+			<span> By <a href="https://maxleiter.com">Max Leiter</a> </span>
+			<a href="https://github.com/MaxLeiter/maxleiter.github.io/blob/master/X11.html" id="source">This page on GitHub</a>
+		</footer>
 	</body>
 </html>
