--- a/X11.html
+++ b/X11.html
@@ -30,6 +30,7 @@
 					<li> <a href="#roadmap">Roadmap</a> </li>
 					<li> <a href="#contribute">Want to contribute?</a> </li>
 					<li> <a href="#instructions">Building instructions</a> </li>
+					<li> <a href="#tips">Tips, bugs, etc.</a> </li>
 				</ol>
 			</aside>
 			<div class="blog main wrapper clearfix">
@@ -79,8 +80,8 @@
 				Interested in using X11 now, or helping make it available sooner? Feel free to <a href="mailto:maxwell.leiter@gmail.com">email me</a> or find me on IRC as MaxLeiter in #X11iOS on Freenode. More information on contributing is in the works. 
 				<h3 class="header" id="instructions"> Building instructions </h3>
 				<div class="info"><i> Note: This section is unfinished. Here be dragons. </i></div>
-				<p>Before you start, be sure to have an iOS SDK located at <code>/usr/share/iPhoneOS.sdk</code> for sbingner's llvm-10 to function.</p>
-				<p>The following tools/libraries are required to to build the packages (unless you choose to build these yourself): </p>
+				<p>Before you start, be sure to have an iOS SDK located at <code>/usr/share/iPhoneOS.sdk</code> for sbingner's llvm-10 to function. You can get the SDKs from <a href="https://github.com/theos/sdks/">theos</a>. </p>
+				<p>The following tools/libraries are required to build the packages (unless you choose to build these yourself): </p>
 				<p>
 				From <a href="https://mcapollo.github.io">MCApollo's repository</a>:
 				<ul>
@@ -225,8 +226,107 @@
 							<td>0.4.5</td>
 							<td></td>
 						</tr>
+						<tr>
+							<td>libXrender</td>
+							<td>0.9.10</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXcursor</td>
+							<td>1.2.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXdamage</td>
+							<td>1.1.5</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libfontenc</td>
+							<td>1.1.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXfont2</td>
+							<td>2.0.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXft</td>
+							<td>2.3.3</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXi</td>
+							<td>1.7.10</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXinerama</td>
+							<td>1.1.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXrandr</td>
+							<td>1.5.2</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXres</td>
+							<td>1.2.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXtst</td>
+							<td>1.2.3</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXv</td>
+							<td>1.0.11</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXvMC</td>
+							<td>1.0.12</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXxf86dga</td>
+							<td>1.1.5</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libXxf86vm</td>
+							<td>1.1.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libpciaccess</td>
+							<td>1.0.12 ⚠️</td>
+							<td>Unsupported OS</td>
+						</tr>
+						<tr>
+							<td>libdmx</td>
+							<td>1.1.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libxkbfile</td>
+							<td>1.1.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>libxshmfence</td>
+							<td>1.3</td>
+							<td></td>
+						</tr>
 					</tbody>
 				</table>
+				<h3 class="header" id="tips"> Tips, bugs, etc. </h3>
+					<ul>
+						<li>Getting <code>checking build system type... Invalid configuration `arm64-apple-darwin19.0.0': machine `arm64-apple' not recognized</code>? Run <code>echo 'echo arm-apple-darwin' > config.sub</code></li>
+					</ul>
 				<hr>
 				<a class="footnote" id="1" href="#1src">[1] AKA only meant for people who know what they're doing, as it's not close to finished / stable yet.</a> <br>
 				<a class="footnote" id="2" href="#2src">[2] https://tigervnc.org/doc/Xvnc.html </a>  <br>
