--- a/X11.html
+++ b/X11.html
@@ -318,9 +318,44 @@
 							<td></td>
 						</tr>
 						<tr>
-							<td>libxshmfence</td>
-							<td>1.3</td>
+							<td>xcb-util</td>
+							<td>0.4.0</td>
 							<td></td>
+						</tr>
+						<tr>
+							<td>xcb-util-image</td>
+							<td>0.4.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xcb-util-keysyms</td>
+							<td>0.4.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xcb-util-keysyms</td>
+							<td>0.4.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xcb-util-renderutil</td>
+							<td>0.3.9</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xcb-util-wm</td>
+							<td>0.4.1</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xcb-util-cursor</td>
+							<td>0.1.3</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Mako</td>
+							<td>1.1.0</td>
+							<td>If you can't build yourself, try using pip</td>
 						</tr>
 					</tbody>
 				</table>
