--- a/X11.html
+++ b/X11.html
@@ -105,6 +105,10 @@
 				From <a href="https://apt.binger.com">Sam Bingner's</a>:
 				<ul>
 					<li>clang-10</li>
+					<li>Darwin CC Tools</li>
+					<li>Bison</li>
+					<li>Flex</li>
+					<li>libstdc++ (C++ Standard Library symlink)</li>
 				</ul>
 				</p>
 				<p>
@@ -116,7 +120,7 @@
 				</ul>
 				</p>
 				<p>
-					In general, you can follow the instructions from <a href="http://www.linuxfromscratch.org/blfs/">Beyond  LinuxFromScratch</a>. This project is based on 9.0, with version differences marked with ⚠️ below. Empty notes means compiles and works as-is from BLFS. Additionally, all of the packages are available (generally as dylibs) on the Cydia repo linked above.
+					In general, you can follow the instructions from <a href="http://www.linuxfromscratch.org/blfs/">Beyond  LinuxFromScratch</a>. This project is based on 9.0, with version differences marked with ⚠️ below. Projects markd with ❗️ means unavailable on iOS or I was unable to build them. Empty notes means compiles and works as-is from BLFS. Additionally, all of the packages are available (generally as dylibs) on the Cydia repo linked above.
 				</p>
 				<table class="table">
 					<thead>
@@ -304,7 +308,7 @@
 						</tr>
 						<tr>
 							<td>libpciaccess</td>
-							<td>1.0.12 ⚠️</td>
+							<td>1.0.12 ❗️</td>
 							<td>Unsupported OS</td>
 						</tr>
 						<tr>
@@ -356,6 +360,176 @@
 							<td>Mako</td>
 							<td>1.1.0</td>
 							<td>If you can't build yourself, try using pip</td>
+						</tr>
+						<tr>
+							<td>Mesa</td>
+							<td>0.52.1</td>
+							<td>Set DRI drivers to swrast and set gallium drivers to empty. I manually modifed meson_options.txt. Also symlink m4 to <code>/opt/local/bin/gm4</code>. I had to remove an __APPLE__ check in <code>/src/mesa/main/texcompress_s3tc_tmp.h</code> so it used the <code>GL</code> library instead of the macOS <code>OpenGL</code> one.</td> Also, be sure to specify a minimum iOS version so thread-local support works with something like <code>-miphoneos-version-min=11.2</code>.
+						</tr>
+						<tr>
+							<td>xbitmaps</td>
+							<td>1.1.2</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>iceauth</td>
+							<td>1.0.8</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>luit</td>
+							<td>1.1.1</td>
+							<td>Run <code>sed -i -e "/D_XOPEN/s/5/6/" configure</code></td>
+						</tr>
+						<tr>
+							<td>mkfontdir</td>
+							<td>1.0.7</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>mkfontscale</td>
+							<td>1.2.1</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>sessreg</td>
+							<td>1.1.2</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>setxkbmap</td>
+							<td>1.3.2</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>smproxy</td>
+							<td>1.0.6</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>x11perf</td>
+							<td>1.6.1</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xcursorgen</td>
+							<td>1.0.7</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xdpyinfo</td>
+							<td>1.3.2</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xev</td>
+							<td>1.2.3</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xhost</td>
+							<td>1.0.8</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xinput</td>
+							<td>1.6.3</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xkbcomp</td>
+							<td>1.4.2</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xkbevd</td>
+							<td>1.1.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xkbutils</td>
+							<td>1.0.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xkill</td>
+							<td>1.0.5</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xlsatoms</td>
+							<td>1.1.3</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xlsclients</td>
+							<td>1.1.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xmessage</td>
+							<td>1.0.5</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xmodmap</td>
+							<td>1.0.10</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xpr</td>
+							<td>1.0.5</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xprop</td>
+							<td>1.2.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xrandr</td>
+							<td>1.5.1</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xrdb</td>
+							<td>1.2.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xrefresh</td>
+							<td>1.0.6</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xset</td>
+							<td>1.2.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xsetroot</td>
+							<td>1.1.2</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xvinfo</td>
+							<td>1.1.4</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xwd</td>
+							<td>1.0.7</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xwininfo</td>
+							<td>1.1.5</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xwud</td>
+							<td>1.0.5</td>
+							<td></td>
 						</tr>
 					</tbody>
 				</table>
