forgot required perl

--- a/X11.html
+++ b/X11.html
@@ -91,6 +91,7 @@
 					<li>libxml2</li>
 					<li>m4</li>
 					<li>OpenSSL</li>
+					<li>perl</li>
 					<li>PkgConfig</li>
 					<li>libiconv</li>
 					<li>Python@3.7</i>
