--- a/X11.html
+++ b/X11.html
@@ -115,6 +115,8 @@
 				<p>
 				From mine:
 				<ul>
+					<li>automake</li>
+					<li>autoconf</li>
 					<li>ninja</li>
 					<li>libpng</li>
 					<li>gperf</li>
@@ -531,6 +533,16 @@
 							<td>xwud</td>
 							<td>1.0.5</td>
 							<td></td>
+						</tr>
+						<tr>
+							<td>FLTK</td>
+							<td>1.3.5 ❗</td>
+							<td>Couldn't get to build. Probably doable but not necessary for Xvnc.</td>
+						</tr>
+						<tr>
+							<td>tigervnc</td>
+							<td>1.10.1 ⚠️</td>
+							<td>No vncviewer. Disable it via CMake. Remove the <code>if(NOT APPLE)</code> check above the <code>add_subdirectory(unix)</code>. Also remove the <code>find_package(FLTK)</code> check and remove the line <code>add_subdirectory(tests)</code> (as some tests require FLTK). It's important to build tigervnc before building Xvnc.</td>
 						</tr>
 					</tbody>
 				</table>
