--- a/X11.html
+++ b/X11.html
@@ -71,9 +71,10 @@
 				<h3 class="header" id="roadmap"> What's next? </h3>
 				<ul>
 					<li> Fix modern versions of fontconfig (> 2.8.0)</li>
-					<li> OpenGL support via Mesa </li>
-					<li> The rest of Xorg applications </li>
 					<li> Proper desktop enviroments like XFCE and GNOME</li>
+					<ul>
+						<li> requires GTK </li>
+					</ul>
 					<li> Experiment with Wayland </li>
 				</ul>
 				<h3 class="header" id="contribute"> Want to contribute? </h3>
@@ -123,7 +124,7 @@
 				</ul>
 				</p>
 				<p>
-					In general, you can follow the instructions from <a href="http://www.linuxfromscratch.org/blfs/">Beyond  LinuxFromScratch</a>. This project is based on 9.0, with version differences marked with ⚠️ below. Projects marked with ❗️ means unavailable on iOS or I was unable to build them. Empty notes means compiles and works as-is from BLFS. Additionally, all of the packages are available (generally as dylibs) on the Cydia repo linked above.
+					In general, you can follow the instructions from <a href="http://www.linuxfromscratch.org/blfs/">Beyond  LinuxFromScratch</a>. This project is based on 9.0, with version differences or code modications marked with ⚠️ below. Applications and libs marked with ❗️ means unavailable on iOS or I was unable to build them. Empty notes means compiles and works as-is from BLFS. Additionally, all of the packages are available (generally as dylibs) on the Cydia repo linked above.
 				</p>
 				<table class="table">
 					<thead>
@@ -535,6 +536,16 @@
 							<td></td>
 						</tr>
 						<tr>
+							<td>startup-notifcation</td>
+							<td>.12/td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>xterm</td>
+							<td>351/td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>FLTK</td>
 							<td>1.3.5 ❗</td>
 							<td>Couldn't get to build. Probably doable but not necessary for Xvnc.</td>
@@ -543,6 +554,46 @@
 							<td>tigervnc</td>
 							<td>1.10.1 ⚠️</td>
 							<td>No vncviewer. Disable it via CMake. Remove the <code>if(NOT APPLE)</code> check above the <code>add_subdirectory(unix)</code>. Also remove the <code>find_package(FLTK)</code> check and remove the line <code>add_subdirectory(tests)</code> (as some tests require FLTK). It's important to build tigervnc before building Xvnc.</td>
+						</tr>
+						<tr>
+							<td>Xvnc</td>
+							<td>1.10.1 ⚠️</td>
+							<td>Add a <a href="https://raw.githubusercontent.com/phracker/MacOSX-SDKs/master/MacOSX10.3.9.sdk/usr/include/Xplugin.h">fake Xplugin.h</a> to fool <code>/unix/xserver/miext/rootless</code>. Modify <code>rootlessWindow.c</code> to check for <code>"Xplugin.h"</code> instead of <code>&lt;Xplugin.h&gt;</code>. Also, remove the <code>-z, now</code> characters from <code>/unix/xserver/hw/vnc/Makefile.in</code>, where it's assigning <code>libvnc_la_LDFLAGS</code>. </td>
+						</tr>
+						<tr>
+							<td>Glib</td>
+							<td>2.62.4 ❗</td>
+							<td>Disable cocoa and carbon support in build.meson. Had to fake <a href="https://opensource.apple.com/source/Libc/Libc-320/include/crt_externs.h.auto.html"><code>crt_externs.h</code></a>. Remove the <code>if host_system == 'darwin'</code> check in <code>glib/meson.build</code>. Not working yet.</td>
+						</tr>
+						<tr>
+							<td>LuaJIT</td>
+							<td>2.1.0</td>
+							<td>https://github.com/rweichler/luajit-ios</td>
+						</tr>
+						<tr>
+							<td>OpenJPG</td>
+							<td>2.3.1</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>poppler</td>
+							<td>0.84.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>check</td>
+							<td>0.11.0</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>pango</td>
+							<td></td>
+							<td>working on it</td>
+						</tr>
+						<tr>
+							<td>EFL</td>
+							<td>1.23.3</td>
+							<td>working on it</td>
 						</tr>
 					</tbody>
 				</table>
