Small text update

--- a/X11/index.html
+++ b/X11/index.html
@@ -73,10 +73,11 @@
 					<ul>
 						<li> requires GTK </li>
 					</ul>
-					<li> Experiment with Wayland </li>
+					<li> Qt support </li>
+					<li> Experiment with Wayland via wayvnc</li>
 				</ul>
 				<h3 class="header" id="contribute"> Want to contribute? </h3>
-				Interested in using X11 now, or helping make it available sooner? Feel free to <a href="mailto:maxwell.leiter@gmail.com">email me</a> or find me on IRC as MaxLeiter in #X11iOS on Freenode. More information on contributing is in the works. 
+				If you're interested in using X11 now, or helping make it available sooner, feel free to <a href="mailto:maxwell.leiter@gmail.com">email me</a> or find me on IRC as MaxLeiter in #X11iOS on Freenode. More information on contributing is in the works. 
 				<h3 class="header" id="instructions"> Building instructions </h3>
 					<a href="./instructions.html">On a separate page</a>
 				<h3 class="header" id="tips"> Tips, bugs, etc. </h3>
