--- a/X11/index.html
+++ b/X11/index.html
@@ -38,10 +38,10 @@
 				<hr>
 				<h3 class="header" id="intro"> Introduction </h3>
 				<p>
-					I'm excited to announce the "developer edition" <sup><a href="#1" id="1src">[1]</a></sup> of X11 on iOS. Most (see below) packages and dependencies for a fully functioning X11 desktop system on iOS 12 and up have been compiled and are avaiable on Cydia. All packages have been compiled for arm64 and have been tested on iOS 12.4 and iOS 13.1. This requires a jailbroken device. 
+					I'm excited to announce that X11 is coming soon to iOS. Most (see below) packages and dependencies for a fully functioning X11 desktop system have been compiled and are avaiable on Cydia for iOS 11+. All packages have been compiled for arm64 and have been tested on iOS 12.4 and iOS 13.1. This requires a jailbroken device. 
 				</p>
 				<p>
-					This site will serve largely as documentation for building yourself, in case I disappear or lose interest. You can add the Cydia repo below for the deb packages. Please let me know if you run across any issues; it's likely I messed up including a library or something like that.
+					This site will serve largely as documentation for building yourself. You can add the Cydia repo below for the deb packages. Please let me know if you run across any issues with the debs; it's likely I messed up including a library or something like that. <i> (These aren't done just yet.) </i>
 					<br>
 					<br>
 					<a style="opacity: 1;" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://maxleiter.com/cydia"><button>Add to Cydia</button></a>
@@ -49,7 +49,7 @@
 				<img src="./pic.jpeg" alt="X11 on iOS">
 				<h3 class="header" id="how"> How it works </h3>
 				<p>
-					At the moment, a virtual screen is accessed via a VNC client to an Xvnc<sup><a href="#2" id="2src">[2]</a></sup>instance running on the iDevice. If you're unfamiliar, Xvnc is an X server with a virtual screen that can be accessed via VNC. The best part of this is no drivers are required: it's all handled by Xvnc.
+					At the moment, a virtual screen is accessed via a VNC client to an Xvnc<sup><a href="#1" id="1src">[2]</a></sup>instance running on the iDevice. If you're unfamiliar, Xvnc is an X server with a virtual screen that can be accessed via VNC. The best part of this is no drivers are required: it's all handled by Xvnc.
 				</p>
 				<p>
 
@@ -85,8 +85,7 @@
 						<li>Getting <code>checking build system type... Invalid configuration `arm64-apple-darwin19.0.0': machine `arm64-apple' not recognized</code>? Run <code>echo 'echo arm-apple-darwin' > config.sub</code></li>
 					</ul>
 				<hr>
-				<a class="footnote" id="1" href="#1src">[1] AKA only meant for people who know what they're doing, as it's not close to finished / stable yet.</a> <br>
-				<a class="footnote" id="2" href="#2src">[2] https://tigervnc.org/doc/Xvnc.html </a>  <br>
+				<a class="footnote" id="1" href="#1src">[2] https://tigervnc.org/doc/Xvnc.html </a>  <br>
 			</div>
 		</div>
 
