--- a/X11/instructions.html
+++ b/X11/instructions.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Building X11 on iOS</title>
 	<meta name="description" content="Instructions for building X11 and Xorg on jailbroken iOS. ">
-	<meta name="keywords" content="Max,Leiter,Max Leiter, X11, iOS, Linux, Xorg, Cydia, jailbreak, projects">
+	<meta name="keywords" content="Max,Leiter,Max Leiter, X11, iOS, Linux, Xorg, Cydia, jailbreak, projects, instructions">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../css/normalize.min.css">
 	<link rel="stylesheet" href="css/main.css">
