Add info to tips

--- a/X11/index.html
+++ b/X11/index.html
@@ -83,7 +83,9 @@
 				<h3 class="header" id="tips"> Tips, bugs, etc. </h3>
 					<ul>
 						<li>Getting <code>checking build system type... Invalid configuration `arm64-apple-darwin19.0.0': machine `arm64-apple' not recognized</code>? Run <code>echo 'echo arm-apple-darwin' > config.sub</code></li>
+						<li>Once I finish this it should be a little easier porting libraries and apps</li>
 					</ul>
+
 				<hr>
 				<a class="footnote" id="1" href="#1src">[1] https://tigervnc.org/doc/Xvnc.html </a>  <br>
 			</div>
