remove duplicate sentence

--- a/X11/index.html
+++ b/X11/index.html
@@ -56,7 +56,7 @@
 				</p>
 				<h3 class="header" id="why"> Why </h3>
 				<p>
-					I want to turn my iPad into a proper development environment, and a windowing system helps with that. It's a powerful machine with a Unix-like OS, so X11 seemed like a reasonable project. X11 allows running arbirtary Linux applications (assuming you can make them compile) &mdash; Advanced applications like browsers and IDEs are now available, assuming you can make them compile.
+					I want to turn my iPad into a proper development environment, and a windowing system helps with that. It's a powerful machine with a Unix-like OS, so X11 seemed like a reasonable project. X11 allows running arbirtary applications like browsers and IDEs, assuming you can make them compile.
 				</p>
 				
 				<h3 class="header" id="features"> Current Features </h3>
