--- a/X11/index.html
+++ b/X11/index.html
@@ -93,7 +93,7 @@
 
 		<footer class="blog main wrapper" style="display: flex; justify-content: space-between;">
 			<span> By <a href="https://maxleiter.com">Max Leiter</a> </span>
-			<a href="https://github.com/MaxLeiter/maxleiter.github.io/blob/master/X11.html" id="source">This page on GitHub</a>
+			<a href="https://github.com/MaxLeiter/maxleiter.github.io/blob/master/X11/index.html" id="source">This page on GitHub</a>
 		</footer>
 	</body>
 	</html>
