Add X11 info to main page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<h2 class="header">Work Experience</h2>
 					<p>
 						<p>
-							<strong>Fall 2019</strong> | Software Developer <br> <i>USC Annenberg Media, Los Angeles, CA</i> <br>
+							<strong>School year 2019</strong> | Software Developer <br> <i>USC Annenberg Media, Los Angeles, CA</i> <br>
 							Currently handling all development related to the official Annenberg Media app, Annie. 
 						</p>
 					</p>
@@ -103,8 +103,12 @@
 					<h2 class="header">My Projects</h2>
 				</header>
 				<section>
-					<h3>Annie</h3> <span class="after"><a class="box" href="https://github.com/MaxLeiter/jsonTree">developer</a></span>
-					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>. I re-wrote the existing Ionic app with React, Redux, material-ui, and Cordova. The app features an innovative news feed and an interactive chat bot for best engaging with the student and faculty populations at USC.</p>
+					<h3>X11 on iOS</h3> <span class="after"><a href="https://maxleiter.com/X11">website</a><span class="slash">/</span> <a href="https://news.ycombinator.com/item?id=22080927">Hacker News</a> <span class="slash">/</span> <a href="https://maxleiter.com/X11/pic.jpeg">screenshot</a><span class="after"><a class="box" href="https://maxleiter.com/X11">creator</a></span>
+					<p>Patched, compiled, and packaged X11 (<a href="https://en.wikipedia.org/wiki/X_Window_System">the X Window System</a>) for jailbroken iOS devices. </p>
+				</section>
+				<section>
+					<h3>Annie</h3> <span class="after"><a href="https://apps.apple.com/us/app/annie-the-annenberg-app/id1302478311">App Store</a> <span class="slash">/</span> <a href="https://play.google.com/store/apps/details?id=com.uscannenbergmedia.annie&hl=en_US">Google Play</a><span class="after"><a class="box" href="https://github.com/MaxLeiter/jsonTree">developer</a></span>
+					<p>Annie is the official app for the University of Southern California's <a href="http://www.uscannenbergmedia.com/">Annenberg Media Center</a>, written with React, Redux, and material-ui. </p>
 				</section>
 				<section>
 					<h3>jsonTree</h3> <span class="after"><a href="https://github.com/MaxLeiter/jsonTree">GitHub</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/">website</a> <span class="slash">/</span> <a href="https://maxleiter.github.io/jsonTree/example/">demo</a><a class="box" href="https://github.com/MaxLeiter/jsonTree">creator</a></span>
