--- a/X11/index.html
+++ b/X11/index.html
@@ -62,13 +62,13 @@
 				<h3 class="header" id="features"> Current Features </h3>
 				<ul>
 					<li> X11 on iOS via Xvnc </li>
-					<li> Working window manager (jwm) </li>
+					<li> Working window managers (jwm / twm / fluxbox) </li>
 					<li> <a href="https://github.com/MaxLeiter/cydia/tree/master/debs">Loads</a> of other packaged libraries, tools, and applications, including meson/ninja and ocaml. </li>
 					<li> All available in a <a href="https://maxleiter.com/cydia">Cydia repo</a></li>
 				</ul>
 				<h3 class="header" id="roadmap"> What's next? </h3>
 				<ul>
-					<li> Fix modern versions of fontconfig (> 2.8.0)</li>
+					<li> <strike>Fix modern versions of fontconfig (> 2.8.0)</strike> &mdash; <i>this has been addressed.</i></li>
 					<li> Proper desktop enviroments like XFCE and GNOME</li>
 					<ul>
 						<li> requires GTK </li>
