--- a/X11/index.html
+++ b/X11/index.html
@@ -46,7 +46,7 @@
 					<br>
 					<a style="opacity: 1;" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://maxleiter.com/cydia"><button>Add to Cydia</button></a>
 				</p>
-				<img src="./front.jpeg" alt="X11 on iOS">
+				<img src="./front.png" alt="X11 on iOS">
 				<h3 class="header" id="how"> How it works </h3>
 				<p>
 					At the moment, a virtual screen is accessed via a VNC client to an Xvnc<sup><a href="#1" id="1src">[1]</a></sup>instance running on the iDevice. If you're unfamiliar, Xvnc is an X server with a virtual screen that can be accessed via VNC. The best part of this is no drivers are required: it's all handled by Xvnc.
